--- a/inicio_app/templates/modelo_inicio.html
+++ b/inicio_app/templates/modelo_inicio.html
@@ -83,4 +83,36 @@
         <!-- Core theme JS-->
         <script src="{% static 'js/scripts.js' %}"></script>
     </body>
+    <footer>
+        <!-- Footer -->
+        <footer class="footer text-faded text-center py-5">
+           <div class="container">
+             <p class="m-0">
+                 <a href="#" class="link">
+                   <span class="fa-stack fa-lg">
+                     <i class="fa fa-circle fa-stack-2x"></i>
+                     <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+                   </span>
+                 </a>
+                 <a href="#" class="link">
+                   <span class="fa-stack fa-lg">
+                     <i class="fa fa-circle fa-stack-2x"></i>
+                     <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+                   </span>
+                 </a>
+                 <a href="#" class="link">
+                   <span class="fa-stack fa-lg">
+                     <i class="fa fa-circle fa-stack-2x"></i>
+                     <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
+                   </span>
+                 </a>
+             </p>
+             <p class="m-0 mbt">
+                 
+             </p>
+             <p class="m-0 mbt1">&copy; InterStop 2020</p>
+           </div>
+         </footer>
+     
+       </footer>
 </html>
