--- a/administrar_app/templates/admin.html
+++ b/administrar_app/templates/admin.html
@@ -8,21 +8,22 @@
 
 <form action="/iniciar/" method="GET">
     
-   <p>  <input type="submit" value="Modificar Encuesta">&nbsp &nbsp &nbsp &nbsp <input type="submit" value="Ingresar datos rápido">&nbsp &nbsp &nbsp &nbsp<input type="submit" value="Inicio"></p>
+   <center> <p>  <input type="submit" value="Modificar Encuesta">&nbsp &nbsp &nbsp &nbsp <input type="submit" value="Ingresar datos rápido">&nbsp &nbsp &nbsp &nbsp<input type="submit" value="Inicio"></p>
    <div> <p></p></div>
-     
-   <p>Departamento: 
+   <br></br>
+   <br></br>
+   <p> Departamento: 
        &nbsp &nbsp &nbsp<select name="OS">
        <option value="1">Windows Vista</option> 
        </select>
        &nbsp &nbsp &nbsp<input type="submit" value="Eliminar información">
    </p>
-   <p></p> 
+   
    <p>Municipio: 
-      &nbsp &nbsp &nbsp<select name="OS">
+      &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp<select name="OS">
        <option value="1">Windows Vista</option> 
        </select>
-       &nbsp &nbsp &nbsp<input type="submit"  value="Eliminar">
+       &nbsp &nbsp &nbsp<input type="submit"  value="Eliminar informacion"></center>
   
  </form>
     {% endblock %}
