--- a/inicio_app/templates/inicio.html
+++ b/inicio_app/templates/inicio.html
@@ -8,11 +8,11 @@
 
    <form action="/iniciar/" method="GET">
     
-      <p>Usuario:    <input type="text" name="usuario"> </p>
+     <center> <p>Usuario:    <input type="text" name="usuario"> </p>
       <p>Contraseña: <input type="text" name="contraseña"></p>
       <div><p style="background: aquamarine;color: aquamarine"></p></div>
       <p> <input type="submit" value="Iniciar Sesion"></p>
-      <p> <input type="submit" value="Regresar"></p>
+      <p> <input type="submit" value="Regresar"></p></center>
     
     </form>
     {% endblock %}
