--- a/administrar_app/templates/admin.html
+++ b/administrar_app/templates/admin.html
@@ -14,14 +14,14 @@
    <br></br>
    <p> Departamento: 
        &nbsp &nbsp &nbsp<select name="OS">
-       <option value="1">Windows Vista</option> 
+       <option value="1">San Salvador</option> 
        </select>
        &nbsp &nbsp &nbsp<input type="submit" value="Eliminar información">
    </p>
    
    <p>Municipio: 
       &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp<select name="OS">
-       <option value="1">Windows Vista</option> 
+       <option value="1">San Salvador</option> 
        </select>
        &nbsp &nbsp &nbsp<input type="submit"  value="Eliminar informacion"></center>
   
